# prompt2dataset

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/prompt2dataset/: __init__.py  classify.py  clean.py  cli.py  crossval.py  dedup.py  download.py  ids.py  ingest.py  models.py  pipeline.py  resolver.py  sources.py  store.py  train.py  utils.py
tests/: test_classify.py  test_clean.py  test_crossval_folds.py  test_download.py  test_foundation.py  test_pipeline.py  test_prune_missing.py  test_resolver.py  test_sources.py
