[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt2dataset"
version = "0.2.0"
description = "Build labeled image datasets from a plain-English prompt."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Cat Pereira", email = "catpereiradev@gmail.com" },
]
keywords = ["machine-learning", "dataset", "image", "scraping", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Installs CPU torch from PyPI. For a CUDA build, install with
# --index-url https://download.pytorch.org/whl/cu126 (see README)
train = [
    "scikit-learn>=1.3.0",
    "torch-lr-finder>=0.2.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/catherinepereira/prompt2dataset"
"Bug Tracker" = "https://github.com/catherinepereira/prompt2dataset/issues"

[project.scripts]
p2d = "prompt2dataset.ingest:cli"
prompt2dataset = "prompt2dataset.ingest:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt2dataset"]

[tool.hatch.build.targets.sdist]
exclude = [".env", ".env.example", "__pycache__"]
